# DynSoftCursor

./: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  vite.config.js
src/: app.html  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  monitor.rs  mouse.rs  utils.rs  window_control.rs
src/routes/: +layout.ts  +page.svelte
